<resources>
    <string name="PageTurnSettingType_BEFORE_NEXT">이전/다음</string>
    <string name="PageTurnSettingType_NEXT_NEXT">다음/다음</string>
    <string name="PageTurnSettingType_TOP_DOWN_BEFORE_NEXT">상하 이전/다음</string>
    <string name="PageTurnSettingType_TOP_DOWN_NEXT_NEXT">상하 다음/다음</string>
    <string name="PageTurnSettingType_NEXT_BEFORE">다음/이전 (왼손모드)</string>
    <string name="ViewSettingDialog_TITLE">보기 설정</string>

    <string-array name="colorArray">
        <item>#ffffff</item>
        <item>#F4F6F9</item>
        <item>#C1C1C1</item>
        <item>#828282</item>
        <item>#212121</item>
        <item>#ECE0CD</item>
        <item>#CAE3C1</item>
        <item>#C3D9E7</item>
        <item>#D4CAE1</item>
        <item>#EACBD6</item>
    </string-array>

    <string name="BookListFragment_title">서재</string>
    <string name="InfoVersion">버전 정보</string>
    <string name="BuisnessVersion">사업자 정보</string>
    <string name="TermsofUse">버전 정보</string>
    <string name="total_contents">전체 %d</string>
    <string name="select_info">%d권 선택</string>
    <string name="select_all">전체 선택</string>
    <string name="deselect_all">전체 해제</string>
    <string name="notify_back_key">뒤로가기 버튼을 한번 더 누르면 종료됩니다</string>
    <string name="display_type">보기 방식</string>
    <string name="display_type_cover">표지 보기</string>
    <string name="display_type_list">목록 보기</string>
    <string name="display_type_detail">자세히 보기</string>
    <string name="bottomsheet_page">%d / %dp</string>
    <string name="search_result">검색 : %d건</string>
    <string name="menu_mode_slide">넘겨 보기</string>
    <string name="menu_mode_scroll">스크롤 보기</string>
    <string name="menu_note">독서 노트</string>
    <string name="menu_view_setting">보기 설정</string>
    <string name="menu_viewer_setting">뷰어 설정</string>
    <string name="system_brightness">시스템 밝기 </string>
    <string name="system_brightness_info">&#160;- 기기 설정에 따름</string>
    <string name="previous">이전</string>
    <string name="setting">설정</string>
    <string name="direct_move">바로가기\></string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="modify">수정</string>
    <string name="save">저장</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="display_type_detail_u"><u>자세히 보기</u></string>
    <string name="notify_first_page">첫 페이지 입니다.</string>
    <string name="dialog_last_page">마지막 페이지 입니다.</string>
    <string name="dialog_last_page_left_button">첫 페이지 가기</string>
    <string name="dialog_last_page_right_button">내 서재 가기</string>
    <string name="memo_add_hint">메모를 입력해주세요.</string>
    <string name="dialog_memo_update">수정중인 메모가 있습니다.\n저장하시겠습니까?</string>
    <string name="dialog_exist_memo_delete">입력된 메모가 있습니다.\n정말로 삭제하시겠습니까?</string>
    <string name="dialog_memo_delete">메모를 삭제하시겠습니까?</string>
    <string name="empty_note">등록된 북마크 및 메모가 없습니다</string>
    <string name="load_fail_image">해당 이미지를 불러올 수 없습니다.</string>
    <string name="text_count">%d/%d</string>
    <string name="reset_title">모든 설정이 초기화됩니다.\n초기화를 진행하시겠습니까?</string>
    <string name="disable_slidebar_toast">시스템 밝기 설정 해제 후 조정해주세요</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>